tests/NormalTests/paczka1/fuzzy1/65840343.err
Error in line 3: CitH A612 204,4
Error in line 13: CitH A713 61,5
Error in line 25: 3baE A612 48,74
Error in line 29: lGb2v A612 159,1
Error in line 33: 5YHsc A713 5,1
Error in line 37: lGb2v A47 11,03
